--- a/tracking-api/test/integration/integration.csproj
+++ b/tracking-api/test/integration/integration.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
     <PackageReference Include="NUnit.Analyzers" Version="3.6.1" />
     <PackageReference Include="coverlet.collector" Version="3.2.0" />
+    <PackageReference Include="Moq" Version="4.20.72" />
     <ProjectReference Include="../../api/tracking-app.csproj" />
   </ItemGroup>
 
